simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-html-deployment
  labels:
    app: app-html
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-html
  template:
    metadata:
      labels:
        app: app-html
  spec:
    container:
      - name: app-html
    image: httpd:latest
    ports:
      - containerPort: 80
