service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-app
spec:
  type: LoadBalancer
  selector:
    app: meu-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
