ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meu-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: meu-app.dominio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meu-app
                port:
                  number: 80
